# pyconkr-2025-logfire

./: README.md  chat_app.py  chat_app_prometheus.py  chat_app_without_logfire.py  locustfile.py  main.py  pyproject.toml
